[package]
name = "ledger"
version = "0.1.0"
description = "When Excel isn’t dangerous enough"
edition = "2024"

[dependencies]
atoi = "2.0.0"
bimap = "0.6.3"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
comfy-table = "7.1.4"
lazy_static = "1.5.0"
pest = "2.8.1"
pest_derive = "2.8.1"
regex = "1.11.1"
rust_decimal = { version = "1.37.2", features = ["macros"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
