[package]
name = "ledger"
version = "0.1.0"
description = "When Excel isn’t dangerous enough"
edition = "2024"

[dependencies]
atoi = "2.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
comfy-table = { version = "7.1.4", features = ["custom_styling"] }
console = "0.16.2"
lazy_static = "1.5.0"
numfmt = "1.2.0"
pest = "2.8.1"
pest_derive = "2.8.1"
regex = "1.11.1"
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.226", features = ["derive"] }
serde-lexpr = "0.1.3"
serde_json = "1.0.145"

[dev-dependencies]
pretty_assertions = "1.4.1"
